# jcs

./: .gitignore  CMakeLists.txt  CMakePresets.json  buffer.cpp  buffer.hpp  index.cpp  index.hpp  jcs.cpp  query.cpp  query.hpp  serial.cpp  serial.hpp  simple-tags.cpp
platform/: CMakeLists.txt  memory_mapped_file.hpp
platform/linux/: memory_mapped_file.cpp
platform/windows/: memory_mapped_file.cpp
